2009-10-11  Matevz Tadel  <matevz.tadel@ijs.si>

	* libexec/project7.pl:
	Add support for Delta methods.
	For Xport key remove support for S[ref] - it is replaced by q|Q	flag.

	Should either:
	- provide methods to do equivalent of $r->{Xport} =~ /s|S|e|E/; or
	- remove parsing of [] sub-options.

2009-07-09  Matevz Tadel  <matevz.tadel@ijs.si>

	* cfg/Rnr_GL_SKEL.cxx:
	* cfg/Rnr_GL_SKEL.h:
	Improve layout, place ctor and dtor in cxx file.

2009-05-11  Matevz Tadel  <matevz.tadel@ijs.si>

	* libexec/project7.pl:
	If exported data-member is a reference, parse '&' off the type.
	This is mostly a hack - for reference data members in Var1/Dynamico.

2009-04-26  Matevz Tadel  <matevz.tadel@ijs.si>

	Fixes for mac build.

	* configure:
	When searching for existing libsets with 'auto' option, run 'find'
	command so that its failure can be detected.

	* make/make_defs.inc:
	Pull in some cflags via 'root-config --auxcflags'.

2009-04-12  Matevz Tadel  <matevz.tadel@ijs.si>

	* Makefile:
	Add targets echo_subdirs and echo_svn_modified.

	* bin/gled-create-libset:
	Fix comments in auto-generated glass.list.

	* libexec/gled_cat_gen.pl:
	Remove useless code trying to deduce existing glasses - this was
	never used and couldn't replace hand-written glass.list anyway.

	* libexec/gled_glue_gen.pl:
	Determine which renderers to instantiate according to the new
	convention.

	* libexec/project7.pl:
	Modify interpretation of L{a} and L{A}. Before they were synonyms,
	now they do this:
	  a - generate protected assert_<linkname>;
	  A - generate public Assert<linkname> returning the object ptr.

	* make/make_targets.inc:
	Fix inconsistent names of some echo targets.

2009-04-07  Matevz Tadel  <matevz.tadel@ijs.si>

	* cfg/project7.rc:
	* libexec/project7.pl:
	Remove support for enum-extraction pass.
	Write enum info into new GledNS::EnumInfo structure attached into
	the ClassInfo.

	* configure:
	Remove code that made special p7 pass to extract enum info.
